managed-ssl-certificates-for-a-private-kubernetes-cluster/code/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
      - hello-world.kevinlutzer.ca
      secretName: hello-world-ca-tsl
  rules:
    - host: hello-world.kevinlutzer.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world
                port:
                  number: 80
